спеціальний коміт для лабораторної роботи 5))

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "jsdoc": "^4.0.4",
     "vite": "^6.2.0"
   }
 }
